WIP: edit mode, learning how stuff works

--- a/src/components/formInput.css
+++ b/src/components/formInput.css
@@ -1,9 +1,9 @@
 input {
-    padding: 15px;
-    margin: 10px 0;
+    /* padding: 15px; */
+    /* margin: 10px 0; */
 }
 
-span {
+span.errorMessage {
     color: red;
     display: none;
 }
