--- a/src/App.css
+++ b/src/App.css
@@ -37,20 +37,23 @@
   }
 } */
 
-table {
+/* table {
   border-collapse: collapse;
   border: 1px solid black;
 } 
 
 th,td {
   border: 1px solid black;
-}
+} */
 
 
 
-
+/* 
 table {
   table-layout: auto;
   width: 100%;  
-}
+} */
 
+.block {
+  display:block
+}
